Use a temporary directory under root instead of a fixed directory name
The fixed directory name is not important to the purpose of the test.